Fixed the media player iframe and modal to fit a lot better on mobile devices.

--- a/src/index.scss
+++ b/src/index.scss
@@ -23,3 +23,8 @@
 
 html { scroll-behavior: smooth; }
 
+@media (max-width: 600px) {
+  iframe {
+    max-height: 300px !important;
+  }
+}
